# hack

speedread/: README.md  config.py  pyproject.toml  speedread.py
vancouver_heritage/: Pipfile  heritage_photos.py
